# mofumofu-backend/src/api/v0/routes/post/routes.rs
@@ -1,10 +1,13 @@
 use crate::api::v0::routes::post::create_post::create_post;
 use crate::api::v0::routes::post::get_post_by_handle_and_slug::get_post_by_handle_and_slug;
 use crate::api::v0::routes::post::get_posts::get_posts;
+use crate::api::v0::routes::post::increment_view::increment_view;
 use crate::api::v0::routes::post::search_posts::search_posts;
 use crate::api::v0::routes::post::upload_thumbnail::upload_thumbnail;
 use crate::{middleware::auth::access_jwt_auth, state::AppState};
 use axum::{Router, middleware::from_fn, routing::post};
+use crate::middleware::anonymous_user::anonymous_user_middleware;
+use crate::middleware::auth::refresh_jwt_auth;
 
 pub fn post_routes() -> Router<AppState> {
     Router::new()
@@ -17,6 +20,7 @@ pub fn post_routes() -> Router<AppState> {
             post(upload_thumbnail).route_layer(from_fn(access_jwt_auth)),
         )
         .route("/post/get", post(get_post_by_handle_and_slug))
+        .route("/post/view", post(increment_view).route_layer(axum::middleware::from_fn(anonymous_user_middleware)))
         .route("/posts", post(get_posts))
         .route("/posts/search", post(search_posts))
 }
